src/bin/loadzone/tests/error/error.known
Error reading zone file: Cannot parse RR, No $ORIGIN: @ IN SOA ns hostmaster 1 3600 1800 1814400 3600
Error reading zone file: $ORIGIN is not absolute in record: $ORIGIN com
Error reading zone file: Cannot parse RR: $TL 300
Error reading zone file: Cannot parse RR: $OIGIN com.
Error loading database: Error while loading com.: Cannot parse RR: $INLUDE file.txt
Error loading database: Error while loading com.: Invalid $include format
Error loading database: Error while loading com.: Cannot parse RR, No $ORIGIN:  include.txt sub
Error reading zone file: Invalid TTL: ""
Error reading zone file: Invalid TTL: "M"
Error loading database: Error while loading com.: Cannot parse RR: b "no type error!"
Error reading zone file: Could not open bogusfile
